<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_delete" android:icon="?ic_action_delete"
		android:title="@string/menu_delete" />

	<item android:id="@+id/menu_cancel"
		android:title="@string/menu_cancel" />
</menu>