...
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/background_light"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:scrollbarStyle="outsideOverlay"/>
...
