<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
   <item android:id="@+id/menu_search"
          android:title="@string/search_hint"
          android:icon="?action_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"
          android:orderInCategory="0"/> 
</menu>