...
    <string name="menu_deletelist">Delete list</string>
    <string name="menu_sync">Refresh</string>
    <string name="menu_share">Share</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_renamelist">Rename list</string>
    <string name="menu_createlist">Create list</string>
    <string name="menu_clearcompleted">Clear completed</string>
    <string name="menu_setdefaultlist">Set as default list</string>
    <string name="menu_managelists">Manage lists</string>
    <string name="delete_list_warning">Are you sure you want to delete the list? The list will be permanently deleted.</string>
    <string name="editor_due_date_hint">Due date</string>
    <string name="editor_title_hint">Title</string>
    <string name="editor_note_hint">Note</string>
...
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="onehour">One hour</string>
    <string name="oneday">One day</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="show_from_all_lists">All lists</string>
    <string name="default_list_needed_warning">Set a default list first</string>
    <string name="reverted">Reverted changes</string>
    <string name="notecopied">Copied</string>
    <string name="deleted">Deleted</string>
    <string name="items">notes</string>
...
