...
        android:id="@+id/indent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <com.nononsenseapps.ui.NoteCheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <com.nononsenseapps.ui.DateView
        android:id="@+id/date"
...
